tests/fixtures/LatestTests/VariableDeclarationTests/errors/assignment_to_non_lvalue_expression.fg
/; EXPECT_ERROR: UnexpectedExpression
var x:int = 10
var y:int = 20
(x + y) = 30

